--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-camera-roll/camera-roll": "^7.9.0",
+    "@react-native-clipboard/clipboard": "^1.16.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.31",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
@@ -30,20 +34,36 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "pinyin-pro": "^3.26.0",
+    "pure-uuid": "^1.8.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-audio-recorder-player": "^3.6.12",
+    "react-native-chat-sdk": "^1.8.0",
+    "react-native-chat-uikit": "/Users/asterisk/tmp2025/2025-01-20/react-native-chat-uikit-2.4.2",
+    "react-native-create-thumbnail": "^2.0.1",
+    "react-native-device-info": "^14.0.4",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-file-access": "^3.1.1",
+    "react-native-gesture-handler": "^2.23.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-image-picker": "^8.0.0",
+    "react-native-permissions": "^5.2.5",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.6.0",
+    "react-native-video": "^6.10.0",
+    "react-native-web": "^0.19.13",
+    "react-native-webview": "^13.13.2",
+    "twemoji": "^14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native-get-random-values": "^1",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
