--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -120,6 +120,10 @@ android {
         jniLibs {
             useLegacyPackaging (findProperty('expo.useLegacyPackaging')?.toBoolean() ?: false)
         }
+        pickFirst 'lib/arm64-v8a/libaosl.so'
+        pickFirst 'lib/armeabi-v7a/libaosl.so'
+        pickFirst 'lib/x86/libaosl.so'
+        pickFirst 'lib/x86_64/libaosl.so'
     }
     androidResources {
         ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:!CVS:!thumbs.db:!picasa.ini:!*~'
