--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "startr": "expo start --clear",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -19,6 +20,7 @@
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-camera-roll/camera-roll": "^7.9.0",
     "@react-native-clipboard/clipboard": "^1.16.1",
+    "@react-native-community/blur": "^4.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "date-fns": "^4.1.0",
@@ -39,7 +41,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-agora": "4.3.2",
     "react-native-audio-recorder-player": "^3.6.12",
+    "react-native-chat-callkit": "/Users/asterisk/Output/npm/react-native-chat-callkit-1.0.4",
     "react-native-chat-sdk": "^1.8.0",
     "react-native-chat-uikit": "/Users/asterisk/tmp2025/2025-01-20/react-native-chat-uikit-2.4.2",
     "react-native-create-thumbnail": "^2.0.1",
