--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "react-native": "0.76.7",
     "react-native-agora": "4.3.2",
     "react-native-audio-recorder-player": "^3.6.12",
-    "react-native-chat-callkit": "/Users/asterisk/Output/npm/react-native-chat-callkit-1.0.4",
+    "react-native-chat-callkit": "1.0.5",
     "react-native-chat-sdk": "^1.8.0",
-    "react-native-chat-uikit": "/Users/asterisk/tmp2025/2025-01-20/react-native-chat-uikit-2.4.2",
+    "react-native-chat-uikit": "2.4.3-beta.1",
     "react-native-create-thumbnail": "^2.0.1",
     "react-native-device-info": "^14.0.4",
     "react-native-document-picker": "^9.3.1",
