--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "expo_demo_2025-02-07",
-  "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
-    "startr": "expo start --clear",
+    "start": "expo start --dev-client",
+    "startr": "expo start --clear --dev-client",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -27,6 +26,7 @@
     "expo": "~52.0.31",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
+    "expo-dev-client": "~5.0.14",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
