--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-camera-roll/camera-roll": "^7.9.0",
     "@react-native-clipboard/clipboard": "^1.16.1",
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-documents/picker": "^10.1.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "date-fns": "^4.1.0",
@@ -43,12 +44,11 @@
     "react-native": "0.76.7",
     "react-native-agora": "4.3.2",
     "react-native-audio-recorder-player": "^3.6.12",
-    "react-native-chat-callkit": "1.0.5",
+    "react-native-chat-callkit": "^1.0.8",
     "react-native-chat-sdk": "^1.8.0",
-    "react-native-chat-uikit": "2.4.3-beta.1",
+    "react-native-chat-uikit": "2.4.7",
     "react-native-create-thumbnail": "^2.0.1",
     "react-native-device-info": "^14.0.4",
-    "react-native-document-picker": "^9.3.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-file-access": "^3.1.1",
     "react-native-gesture-handler": "^2.23.0",
@@ -75,5 +75,5 @@
     "typescript": "^5.3.3"
   },
   "private": true,
-  "packageManager": "yarn@4.6.0+sha512.5383cc12567a95f1d668fbe762dfe0075c595b4bfff433be478dbbe24e05251a8e8c3eb992a986667c1d53b6c3a9c85b8398c35a960587fbd9fa3a0915406728"
+  "packageManager": "yarn@4.9.1"
 }
